Opened 8 years ago

Closed 8 years ago

#7436 closed defect (fixed)

Unable to stream from Point Grey Flea3 camera using FFmpeg(4.0.2) DirectShow filter

Reported by: lhastie Owned by:
Priority: normal Component: avdevice
Version: git-master Keywords: dshow
Cc: Blocked By:
Blocking: Reproduced by developer: no
Analyzed by developer: no

Description

Camera resolution is 1200 x 720. Version of FFmpeg (4.0.2). Command line is as follows:

ffmpeg -f dshow -i video="Point Grey Camera" -vcodec flv -g 5 -q 10 -f flv c:\temp\test.flv

The following error is displayed :

[NULL @ 000002279a1534c0] [IMGUTILS @ 000000a89a7fe990] Picture size 1200x4294966576 is invalid

I raised a ticket directly with our camera supplier and they informed me that their DirectShow filter returns the image dimensions as 1200 x -720 indicating that the top row comes first in memory. Can you tell me if the current version of FFmpeg supports negative image height? We have older versions of FFmpeg that work perfectly well with the same camera set with the same resolution.

Attachments (1)

patchdshowbottomup.diff (809 bytes ) - added by Carl Eugen Hoyos 8 years ago.

Download all attachments as: .zip

Change History (10)

comment:1 by Carl Eugen Hoyos, 8 years ago

Keywords: dshow added
Priority: importantnormal

Please test current FFmpeg git head, nothing else is supported here, and provide the command line you tested together with the complete, uncut console output to make this a valid ticket.

comment:2 by Carl Eugen Hoyos, 8 years ago

And please tell us which commit introduced the regression you see.

comment:3 by lhastie, 8 years ago

I tested with the latest version on your download page (ffmpeg-4.0.2.tar.bz2). Are you saying that I have to download the latest snapshot version?

comment:4 by Carl Eugen Hoyos, 8 years ago

Definitely, there is no release support for Windows.

comment:5 by lhastie, 8 years ago

Tested against the latest snapshot version. Please see output below :

ffmpeg -f dshow -i video="Point Grey Camera" -vcodec flv -g 5 -q 10 -f flv c:\temp\test.flv
ffmpeg version N-91930-g0caa33c60b Copyright (c) 2000-2018 the FFmpeg developers
  built with gcc 8.2.1 (GCC) 20180813
  configuration: --enable-gpl --enable-version3 --enable-sdl2 --enable-fontconfig --enable-gnutls --enable-iconv --enable-libass --enable-libbluray --enable-libfreetype --enable-libmp3lame --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libopus --enable-libshine --enable-libsnappy --enable-libsoxr --enable-libtheora --enable-libtwolame --enable-libvpx --enable-libwavpack --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxml2 --enable-libzimg --enable-lzma --enable-zlib --enable-gmp --enable-libvidstab --enable-libvorbis --enable-libvo-amrwbenc --enable-libmysofa --enable-libspeex --enable-libxvid --enable-libaom --enable-libmfx --enable-amf --enable-ffnvcodec --enable-cuvid --enable-d3d11va --enable-nvenc --enable-nvdec --enable-dxva2 --enable-avisynth
  libavutil      56. 19.101 / 56. 19.101
  libavcodec     58. 30.100 / 58. 30.100
  libavformat    58. 18.100 / 58. 18.100
  libavdevice    58.  4.103 / 58.  4.103
  libavfilter     7. 29.100 /  7. 29.100
  libswscale      5.  2.100 /  5.  2.100
  libswresample   3.  2.100 /  3.  2.100
  libpostproc    55.  2.100 / 55.  2.100
[NULL @ 00000220861d34c0] [IMGUTILS @ 000000cd7e3feb90] Picture size 1200x4294966576 is invalid
[dshow @ 00000220861ca3c0] Could not find codec parameters for stream 0 (Video: rawvideo, bgr0): unspecified size
Consider increasing the value for the 'analyzeduration' and 'probesize' options
Input #0, dshow, from 'video=Point Grey Camera':
  Duration: N/A, start: 3563175.687000, bitrate: N/A
    Stream #0:0: Video: rawvideo, bgr0, 25 fps, 25 tbr, 10000k tbn, 10000k tbc
Stream mapping:
  Stream #0:0 -> #0:0 (rawvideo (native) -> flv1 (flv))
Press [q] to stop, [?] for help
[rawvideo @ 00000220861d5340] width is not set
Error while decoding stream #0:0: Invalid data found when processing input
[rawvideo @ 00000220861d5340] width is not set
Last edited 8 years ago by Carl Eugen Hoyos (previous) (diff)

comment:6 by lhastie, 8 years ago

After some investigation, it would seem that negative y resolution values have never been supported.

by Carl Eugen Hoyos, 8 years ago

Attachment: patchdshowbottomup.diff added

comment:7 by Carl Eugen Hoyos, 8 years ago

Please test attached patch.

comment:8 by lhastie, 8 years ago

Just tested the attached patch and it works perfectly.

Thanks

comment:9 by Carl Eugen Hoyos, 8 years ago

Component: undeterminedavdevice
Resolution: fixed
Status: newclosed
Version: unspecifiedgit-master

Should be fixed in 1ba32a3c464a37beeb0943a630d5905d84d61b32, thank you for the report and the test!

Note: See TracTickets for help on using tickets.