lavd/dshow: Interpret negative height as bottom-down frame.

Fixes ticket #7436.